fix css styling on mobile

--- a/product-preview-card-component/style.css
+++ b/product-preview-card-component/style.css
@@ -5,13 +5,12 @@ html {
   font-size: 14px;
 }
 
-html,
 body {
-  height: 100%;
-  margin: 0;
+  min-height: 100vh;
   display: grid;
   place-content: center;
 }
+
 
 
 *,
@@ -28,8 +27,7 @@ body {
 }
 
 .image-side img {
-  max-width: 100%;
-  height: 100%;
+  width: 100%;
 }
 
 .detail-side {
